# ccpp-framework

./: .gitignore  CMakeLists.txt  README.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: capgen_unit_tests.yaml
cmake/: ccpp_capgen.cmake
doc/: README.md
schemes/check/: CMakeLists.txt
scripts/: ccpp_capgen.py  ccpp_prebuild.py  ccpp_track_variables.py  common.py  convert_metadata.py  convert_metadata_schemes_using_typedef_dims.py  metadata_parser.py  metadata_table.py  mkdoc.py  mkstatic.py  var_props.py
scripts/conversion_tools/: unit_conversion.py
scripts/fortran_tools/: fortran_write.py  parse_fortran_file.py
scripts/parse_tools/: parse_checkers.py  parse_source.py
src/: CMakeLists.txt
test/: CMakeLists.txt  README.md
test/advection_test/: CMakeLists.txt  README.md  test_advection_host_integration.F90
test/capgen_test/: CMakeLists.txt  README.md  capgen_test_reports.py  test_capgen_host_integration.F90
test/ddthost_test/: CMakeLists.txt  README.md  test_ddt_host_integration.F90
test/unit_tests/: README.md  test_common.py  test_fortran_write.py  test_metadata_scheme_file.py
test/unit_tests/sample_files/fortran_files/: long_string_test.F90
test/unit_tests/sample_scheme_files/: temp_adjust.F90
test/utils/: CMakeLists.txt
test/var_compatibility_test/: CMakeLists.txt  README.md  test_var_compatibility_integration.F90  var_compatibility_test_reports.py
