add_subdirectory(utils)

if(CCPP_FRAMEWORK_ENABLE_TESTS OR CCPP_RUN_ADVECTION_TEST)
  add_subdirectory(advection_test)
endif()
if(CCPP_FRAMEWORK_ENABLE_TESTS OR CCPP_RUN_CAPGEN_TEST)
  add_subdirectory(capgen_test)
endif()
if(CCPP_FRAMEWORK_ENABLE_TESTS OR CCPP_RUN_DDT_HOST_TEST)
  add_subdirectory(ddthost_test)
endif()
if(CCPP_FRAMEWORK_ENABLE_TESTS OR CCPP_RUN_VAR_COMPATIBILITY_TEST)
  add_subdirectory(var_compatibility_test)
endif()
